# ebix_faqbot

./: .gitignore  api.py  app.py  check_metadata.py  delete_consumer.py  frontend.html  ingest.py  main.py  pyproject.toml  requirements.txt
cache/: query_cache.json
data/: cleaned_chunks.txt  raw_chunks.txt
processing/: chunking.py  deduplicate.py  duplicate.py  embeddings.py  store_vector_db.py
retrieval/: cache.py  qa_chain.py  retrieve.py
scraper/: clean_text.py  crawl_urls.py  extract_content.py
