[project]
name = "faqbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "groq>=1.2.0",
    "langchain>=1.3.1",
    "langchain-text-splitters>=1.1.2",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.5.0",
    "streamlit>=1.57.0",
    "trafilatura>=2.0.0",
]
